<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_type">@string/app_id</string>
    <string name="adplayer_counting_midroll">Videoen fortsetter om %s s</string>
    <string name="adplayer_counting_postroll">Slutter om %s s</string>
    <string name="adplayer_counting_preroll">Videoen starter om %s s</string>
    <string name="adplayer_visit_advertiser">Gå til annonsør</string>
    <string name="allprograms_filter_all">Alle</string>
    <string name="allprograms_filter_button">Filter</string>
    <string name="allprograms_filter_category">Kategori</string>
    <string name="allprograms_filter_channel">Kanal</string>
    <string name="allprograms_filter_on_category">Filtrer pr. kategori</string>
    <string name="allprograms_filter_on_channel">Filtrer pr. kanal</string>
    <string name="allprograms_no_results_found">"Ingen resultater funnet...
Prøv igjen!"</string>
    <string name="app_id">no.viafree.android</string>
    <string name="app_name">Viafree</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">Audio</string>
    <string name="blank">%s</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Caster til %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Laster…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_live_label">LIVE</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="change_email_title">Endre e-postadresse</string>
    <string name="change_password_button_title">Endre passord</string>
    <string name="change_password_cancel" />
    <string name="change_password_confirm_new_password">Nytt passord</string>
    <string name="change_password_failed">Ugyldig passord</string>
    <string name="change_password_hint_new_password">Nytt passord</string>
    <string name="change_password_hint_new_password_confirm">Nytt passord</string>
    <string name="change_password_hint_old_password">Ditt eksisterende passord</string>
    <string name="change_password_invalid_new_password">Passordet må bestå av minst åtte tegn</string>
    <string name="change_password_invalid_new_password_empty">Passordet må bestå av minst åtte tegn</string>
    <string name="change_password_invalid_old_password">Ugyldig passord</string>
    <string name="change_password_passwords_must_match">Ugyldig passord</string>
    <string name="change_password_restore_button_title">Send meg en e-post</string>
    <string name="change_password_restore_button_title_done">Okej</string>
    <string name="change_password_restore_failed" />
    <string name="change_password_restore_no_account_with_that_email" />
    <string name="change_password_restore_sent_email_text">Vi har sendt en e-post til denne adressen med mer informasjon om hvordan du kan gjenopprette passordet ditt</string>
    <string name="change_password_restore_text">Har du glemt passordet ditt? Ikke noe problem. Oppgi e-postadressen din nedenfor så sender vi deg en link med informasjon om hvordan du kan gjenopprette passordet.</string>
    <string name="change_password_restore_title">Gjenopprett passord</string>
    <string name="change_password_title">Endre passord</string>
    <string name="change_password_we_use_same_login_explanation">Vær oppmerksom på at passordet også vil bli endret på Viaplay</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chromecast_connection_recovered">Koblet til Chromecast</string>
    <string name="chromecast_no_connection">Ingen forbindelse til Chromecast-enhet</string>
    <string name="com.crashlytics.android.build_id">09868d42-d455-4da2-8820-6c6432d01f19</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="login_create_account">Har du ingen konto ennå? Opprett konto her</string>
    <string name="login_email_hint">E-post</string>
    <string name="login_existing_account">Har du allerede en konto? Logg inn her</string>
    <string name="login_forgot_password">Glemt passord?</string>
    <string name="login_login_with_facebook">Logg inn med Facebook</string>
    <string name="login_onboarding_create_account_button_text">OK</string>
    <string name="login_onboarding_create_account_description">Du kan også opprette kontoen på kontosiden dersom du heller vil gjøre det senere. Der finner du også alle dine opplysninger og kontoinnstillinger.</string>
    <string name="login_onboarding_create_account_hint">Her finner du kontosiden</string>
    <string name="login_onboarding_create_account_title">Opprett konto nå!</string>
    <string name="login_options_divider_or">eller</string>
    <string name="login_page_forced_alreday_have_account">Har du allerede en konto?</string>
    <string name="login_page_forced_create_account">Opprett konto</string>
    <string name="login_page_forced_login_description">Med en gratis konto kan du fortsette å se der du sluttet, slippe å gå glipp av nye episoder, følge med på favorittene dine og få anbefalinger som passer for deg.</string>
    <string name="login_page_forced_login_title">For å se dette programmet må du opprette en gratis konto</string>
    <string name="login_password_hint">Passord</string>
    <string name="login_signup_with_email">Opprett konto</string>
    <string name="login_wrong_credentials">Feil e-postadresse eller passord</string>
    <string name="myviafree_create_button_text">Opprett konto</string>
    <string name="navigation_login">Logg inn</string>
    <string name="startpage_create_account">Opprett konto</string>
    <string name="startpage_login_upsell_continue_watching">Opprett en konto og fortsett å se der du sluttet – start på bussen, se resten hjemme. Helt gratis!</string>
    <string name="user_details_error_invalid_email">Du må oppgi en gyldig e-postadresse</string>
</resources>