<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/same_login_service" />
    <com.viafree.android.common.custom_views.CustomFontTextView android:id="@id/restore_password_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing_large" android:layout_marginBottom="@dimen/default_spacing_large" android:text="@string/change_password_restore_text" />
    <com.viafree.android.common.custom_views.CustomFontEditText android:id="@id/restore_password_email" android:layout_width="fill_parent" android:layout_marginBottom="@dimen/default_spacing_small" android:hint="@string/login_email_hint" android:inputType="textEmailAddress" app:customFontStyle="mtgSansBold" app:hintFontStyle="mtgSans" style="@style/defaultEditTextStyle" />
    <com.viafree.android.common.custom_views.CustomFontTextView android:textAppearance="@style/textDefault" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing" android:text="@string/change_password_we_use_same_login_explanation" app:customFontStyle="mtgSansBold" />
    <com.viafree.android.common.custom_views.CustomFontTextView android:textSize="12.0sp" android:textColor="@color/error_orange" android:gravity="center" android:id="@id/restore_password_failed" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/default_spacing" android:layout_marginBottom="@dimen/default_spacing_small" android:text="@string/user_details_error_invalid_email" />
    <FrameLayout android:id="@id/restore_password_submit_button_container" android:layout_width="fill_parent" android:layout_marginBottom="@dimen/default_spacing_extra_large" style="@style/roundButtonStyleDark">
        <com.viafree.android.common.custom_views.CustomFontTextView android:textAppearance="@style/textDefault.Large.White" android:gravity="center" android:id="@id/restore_password_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/change_password_restore_button_title" app:customFontStyle="mtgSansBold" />
        <ProgressBar android:layout_gravity="center" android:id="@id/restore_password_progressbar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" />
    </FrameLayout>
</LinearLayout>