<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.AppCompatImageView android:id="@id/forced_login_image" android:background="@color/white" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="centerCrop" app:layout_constraintDimensionRatio="16:9" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <com.viafree.android.common.custom_views.Swoosh android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/forced_login_image" app:swoosh_color="@color/offwhite" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/default_spacing_large" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/forced_login_image">
        <android.support.v7.widget.AppCompatTextView android:textSize="22.0sp" android:textColor="@color/jumbo_dark_tone" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_page_forced_login_title" app:fontFamily="@font/oduda_regular" />
        <android.support.v7.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/jumbo" android:gravity="center" android:id="@id/forced_login_upsell_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing_extra_large" android:text="@string/login_page_forced_login_description" app:fontFamily="@font/oduda_regular" />
        <include android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" layout="@layout/same_login_service" />
        <android.support.v7.widget.AppCompatTextView android:textColor="@color/abbey_dark_tone" android:gravity="center" android:id="@id/forced_login_login_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing" android:text="@string/login_page_forced_alreday_have_account" app:fontFamily="@font/mtg_sans_bold" style="@style/roundButtonStyleWhite" />
        <android.support.v7.widget.AppCompatTextView android:gravity="center" android:id="@id/forced_login_create_account_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing" android:text="@string/login_page_forced_create_account" app:fontFamily="@font/mtg_sans_bold" style="@style/roundButtonStyleDark" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>