<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/silver" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/content_block_list" />
    <View android:background="@color/white" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:alpha="0.75" />
    <LinearLayout android:orientation="vertical" android:id="@id/login_upsell_wrapper" android:padding="@dimen/default_spacing" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.viafree.android.common.custom_views.CustomFontTextView android:textAppearance="@style/textDefault.ExtraExtraExtraLarge.Abbey" android:gravity="center" android:id="@id/startpage_item_collection_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/default_spacing_large" android:layout_marginTop="@dimen/default_spacing_large" android:layout_marginRight="@dimen/default_spacing_large" android:layout_marginBottom="@dimen/default_spacing_large" android:text="@string/startpage_create_account" android:layout_marginStart="@dimen/default_spacing_large" android:layout_marginEnd="@dimen/default_spacing_large" app:customFontStyle="mtgSansBlack" />
        <com.viafree.android.common.custom_views.CustomFontTextView android:textAppearance="@style/textDefault.ExtraLarge.Abbey" android:gravity="center" android:layout_gravity="center" android:id="@id/startpage_login_continue_watching_usp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/default_spacing_large" android:maxWidth="400.0dip" android:text="@string/startpage_login_upsell_continue_watching" app:customFontStyle="mtgSansBold" />
        <com.viafree.android.common.custom_views.CustomFontTextView android:textAppearance="@style/textDefault.Large.White" android:gravity="center" android:layout_gravity="center" android:id="@id/startpage_login_create_account_button" android:padding="@dimen/default_spacing_small" android:layout_width="fill_parent" android:layout_margin="@dimen/default_spacing_large" android:text="@string/myviafree_create_button_text" app:customFontStyle="mtgSansBold" style="@style/roundButtonStyleRed" />
    </LinearLayout>
</FrameLayout>