<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/offwhite" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/allprograms_filter_button_container" android:background="@color/offwhite" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginRight="@dimen/default_spacing" android:layout_marginEnd="@dimen/default_spacing">
        <com.viafree.android.common.custom_views.CustomFontTextView android:textAppearance="@style/textDefault" android:gravity="center_vertical" android:id="@id/allprograms_filter_text" android:paddingLeft="@dimen/default_spacing" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toLeftOf="@id/allprograms_filter_text_text" android:layout_alignParentLeft="true" android:paddingStart="@dimen/default_spacing" android:layout_toStartOf="@id/allprograms_filter_text_text" android:layout_alignParentStart="true" app:customFontStyle="mtgSans" />
        <com.viafree.android.common.custom_views.CustomFontTextView android:textAppearance="@style/textDefault.Large.Dark1" android:gravity="center_vertical" android:id="@id/allprograms_filter_text_text" android:paddingRight="@dimen/default_spacing" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/allprograms_filter_button" android:layout_toLeftOf="@id/allprograms_filter_icon" android:paddingEnd="@dimen/default_spacing" android:layout_toStartOf="@id/allprograms_filter_icon" app:customFontStyle="mtgSansBold" />
        <ImageView android:id="@id/allprograms_filter_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/allprograms_filter_section" android:background="@color/offwhite" android:paddingLeft="@dimen/default_spacing" android:paddingTop="@dimen/default_spacing" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/default_spacing">
        <com.viafree.android.common.custom_views.CustomFontTextView android:textAppearance="@style/textDefault.Jumbo" android:id="@id/allprograms_category_filter_label" android:paddingRight="@dimen/default_spacing" android:paddingBottom="@dimen/default_spacing_large" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/allprograms_filter_on_category" android:paddingEnd="@dimen/default_spacing" app:customFontStyle="mtgSansLight" />
        <android.support.v7.widget.RecyclerView android:id="@id/allprograms_category_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/default_spacing_extra_large" />
        <com.viafree.android.common.custom_views.CustomFontTextView android:textAppearance="@style/textDefault.Jumbo" android:id="@id/allprograms_channel_filter_label" android:paddingRight="@dimen/default_spacing" android:paddingBottom="@dimen/default_spacing_large" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/allprograms_filter_on_channel" android:paddingEnd="@dimen/default_spacing" app:customFontStyle="mtgSansLight" />
        <android.support.v7.widget.RecyclerView android:id="@id/allprograms_channel_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/default_spacing_extra_large" />
    </LinearLayout>
    <RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.viafree.android.common.custom_views.StickyScrollList android:scrollbarStyle="outsideOverlay" android:id="@id/all_programs_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:smoothScrollbar="true" />
        <TextView android:textSize="18.0dip" android:id="@id/no_content_textview" android:padding="20.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/allprograms_no_results_found" android:layout_centerInParent="true" />
        <ProgressBar android:layout_gravity="center" android:id="@id/allprograms_progressbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>